--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,112 @@
 body {
-    background-color: cadetblue;
+    font-family: "Roboto", sans-serif;
+    background-color: rgba(100, 195, 229, 0.13);
+    margin: 0;
+    width: 100%;
+    overflow: hidden;
+}
+
+/* .welcomeBody {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+} */
+
+.welcomeHeader {
+    overflow: hidden;
+    background-color: rgb(39, 172, 147);
+    width: 100%;
+    height: 60px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 0;
+}
+
+.logo p {
+    color: white;
+    font-size: 40px;
+    font-weight: 600;
+    padding-left: 190px;
+}
+
+.nav {
+    padding-right: 190px;
+}
+
+.nav button {
+    margin-right: 15px;
+    width: 120px;
+    height: 30px;
+}
+
+.logButt {
+    background-color: rgb(39, 172, 147);
+    border: 1px solid white;
+    color: white;
+}
+
+.signButt {
+    background-color: white;
+    color: rgb(39, 172, 147);
+    border: 1px solid rgb(39, 172, 147);
+}
+
+.safeData {
+    margin-top: 0;
+    width: 100%;
+    /* background-color: whitesmoke; */
+    height: 300px;
+    position: relative;
+    left: 200px;
+    top: 70px;
+}
+
+.safeData h1 {
+    color: #1f4554;
+    font-size: 80px;
+}
+
+.safeData h3 {
+    color: #678691;
+    font-size: 30px;
+    position: relative;
+    bottom: 40px;
+    line-height: 40px;
+}
+
+.lock {
+    width: 68.93px;
+    height: 102.57px;
+    position: relative;
+    bottom: 350px;
+    left: 500px;
+}
+
+.key {
+    position: relative;
+    left: 400px;
+    width: 90px;
+    height: 90px;
+    bottom: 150px;
+}
+
+.cloud {
+    width: 200px;
+    height: 200px;
+    position: relative;
+    bottom: 60px;
+    right: 70px;
+    opacity: 0.9;
+}
+
+.contracto {
+    width: 180px;
+    height: 180px;
+    position: relative;
+    left: 400px;
+    bottom: 250px;
+    opacity: 0.9;
 }
