--- a/public/style.css
+++ b/public/style.css
@@ -3,7 +3,7 @@ body {
     background-color: rgba(100, 195, 229, 0.13);
     margin: 0;
     width: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 /* .welcomeBody {
@@ -29,7 +29,7 @@ body {
     color: white;
     font-size: 40px;
     font-weight: 600;
-    padding-left: 190px;
+    padding-left: 200px;
 }
 
 .nav {
@@ -61,7 +61,7 @@ body {
     height: 300px;
     position: relative;
     left: 200px;
-    top: 70px;
+    top: 20px;
 }
 
 .safeData h1 {
@@ -109,4 +109,55 @@ body {
     left: 400px;
     bottom: 250px;
     opacity: 0.9;
+}
+
+.days {
+    width: 100%;
+    height: 300px;
+    position: relative;
+    left: 490px;
+    top: 100px;
+}
+
+.days h1 {
+    color: #1f4554;
+    font-size: 80px;
+}
+
+.days h3 {
+    color: #678691;
+    font-size: 30px;
+    position: relative;
+    bottom: 40px;
+    line-height: 40px;
+}
+
+.edit {
+    position: relative;
+    bottom: 340px;
+    right: 200px;
+    width: 130px;
+    height: 110px;
+}
+
+.erase {
+    position: relative;
+    left: 300px;
+    bottom: 320px;
+}
+
+.surface {
+    width: 230px;
+    height: 260px;
+    position: relative;
+    right: 170px;
+    bottom: 40px;
+}
+
+.delete {
+    width: 70px;
+    height: 100px;
+    position: relative;
+    bottom: 150px;
+    right: 50px;
 }
