--- a/public/style.css
+++ b/public/style.css
@@ -23,6 +23,10 @@ body {
     justify-content: space-between;
     align-items: center;
     margin-bottom: 0;
+    position: fixed;
+    top: 0;
+    z-index: 1;
+    opacity: 0.9;
 }
 
 .logo p {
@@ -40,6 +44,7 @@ body {
     margin-right: 15px;
     width: 120px;
     height: 30px;
+    cursor: pointer;
 }
 
 .logButt {
@@ -124,6 +129,17 @@ body {
     font-size: 80px;
 }
 
+.welcomeBody h1 {
+    color: #1f4554;
+    font-size: 80px;
+}
+
+.welcomeBody h3 {
+    color: #678691;
+    font-size: 30px;
+    line-height: 40px;
+}
+
 .days h3 {
     color: #678691;
     font-size: 30px;
@@ -161,3 +177,252 @@ body {
     bottom: 150px;
     right: 50px;
 }
+
+.plant {
+    position: relative;
+    right: 700px;
+    top: 80px;
+    width: 86px;
+    height: 122px;
+    opacity: 0.8;
+}
+
+.paper h1 {
+    position: relative;
+    top: 410px;
+    left: 230px;
+}
+
+.paper h3 {
+    position: relative;
+    left: 230px;
+    top: 230px;
+}
+
+.contract {
+    width: 100px;
+    height: 100px;
+    transform: matrix(0.96, 0.29, -0.29, 0.96, 0, 0);
+    position: relative;
+    top: 270px;
+    left: 820px;
+}
+
+.world {
+    width: 239px;
+    height: 277px;
+    opacity: 0.9;
+    position: relative;
+    left: 950px;
+}
+
+.wood {
+    width: 154px;
+    height: 136px;
+    transform: matrix(1, 0, 0, 1, 0, 0);
+    opacity: 0.8;
+    position: relative;
+    top: 50px;
+    left: 350px;
+}
+
+.use {
+    position: relative;
+    left: 490px;
+    top: 50px;
+}
+
+.use h3 {
+    position: relative;
+    bottom: 30px;
+    /* left: 40px; */
+}
+
+.puntoUno {
+    position: relative;
+    left: 50px;
+}
+
+.puntoDue {
+    position: relative;
+    bottom: 30px;
+    left: 50px;
+}
+
+.puntoTre {
+    position: relative;
+    bottom: 35px;
+    left: 120px;
+}
+
+.search {
+    width: 128px;
+    height: 137px;
+    opacity: 0.9;
+    position: relative;
+    bottom: 300px;
+    right: 200px;
+}
+
+.code {
+    width: 119px;
+    height: 127px;
+    opacity: 0.9;
+    position: relative;
+    left: 380px;
+    bottom: 300px;
+}
+
+.qr {
+    width: 167px;
+    height: 189px;
+    position: relative;
+    right: 80px;
+}
+
+.footer {
+    background-color: rgb(39, 172, 147);
+    width: 100%;
+    height: 150px;
+    position: relative;
+    top: 150px;
+}
+
+.logFlex {
+    display: flex;
+    flex-direction: column;
+    width: 335px;
+    position: absolute;
+    left: 832px;
+    top: 250px;
+    align-items: center;
+}
+
+.logFlex input {
+    margin-bottom: 40px;
+    text-align: center;
+    font: Thin 20px/24px Roboto;
+    letter-spacing: 0px;
+    color: #27ac93;
+    text-transform: lowercase;
+    opacity: 1;
+    height: 46px;
+    width: 332px;
+    background: #ffffff 0% 0% no-repeat padding-box;
+    box-shadow: 0px 1px 3px #00000033;
+    border: 2px solid #27ac93;
+    border-radius: 24px;
+    opacity: 0.8;
+}
+
+.logFlex button {
+    width: 320px;
+    height: 46px;
+    background: #27ac93 0% 0% no-repeat padding-box;
+    box-shadow: 0px 1px 1px #00000033;
+    border-radius: 4px;
+    opacity: 1;
+    border: hidden;
+    color: white;
+    font: Thin 20px/24px Roboto;
+    letter-spacing: 0px;
+}
+
+.login {
+    position: absolute;
+    top: 126px;
+    left: 811px;
+    width: 100px;
+    height: 53px;
+    text-align: center;
+    font: Bold 45px/53px Roboto;
+    letter-spacing: 0px;
+    color: #1f4554;
+    opacity: 1;
+}
+
+.cloud2 {
+    position: absolute;
+    top: 90px;
+    left: 935px;
+    width: 160px;
+    height: 138px;
+    opacity: 1;
+}
+
+.dinner {
+    position: absolute;
+    top: 265px;
+    left: 365px;
+    width: 211px;
+    height: 176px;
+    opacity: 1;
+}
+
+.code2 {
+    position: absolute;
+    top: 158px;
+    left: 434px;
+    width: 72px;
+    height: 68px;
+    background: transparent url("img/qr-code (1).png") 0% 0% no-repeat
+        padding-box;
+    opacity: 0.7;
+}
+
+.lock2 {
+    position: absolute;
+    top: 130px;
+    left: 238px;
+    width: 34px;
+    height: 48px;
+    opacity: 1;
+}
+
+.care2 {
+    position: absolute;
+    top: 507px;
+    left: 200px;
+    width: 184px;
+    height: 207px;
+    background: transparent url("img/care.png") 0% 0% no-repeat padding-b;
+}
+
+.contract2 {
+    position: absolute;
+    top: 493px;
+    left: 578px;
+    width: 97px;
+    height: 91px;
+    background: transparent url("img/contract.png") 0% 0% no-repeat padding-box;
+    opacity: 0.8;
+}
+
+.logFooter {
+    position: absolute;
+    top: 869px;
+    left: 0px;
+    width: 1440px;
+    height: 238px;
+    background: #27ac93 0% 0% no-repeat padding-box;
+    opacity: 1;
+}
+
+/* .newFlex {
+    display: flex;
+    flex-direction: row;
+}
+
+.newFlex p {
+    position: absolute;
+    top: 621px;
+    left: 832px;
+    width: 205px;
+    height: 24px;
+    text-align: left;
+    font: Regular 20px/11px Roboto;
+    letter-spacing: 0px;
+    color: #678691;
+    text-transform: lowercase;
+    opacity: 1;
+} */
