--- a/public/style.css
+++ b/public/style.css
@@ -772,8 +772,8 @@ body {
 
 .generator {
     position: fixed;
-    left: 1100px;
-    bottom: 253px;
+    left: 1150px;
+    bottom: 273px;
 }
 
 .generator button {
@@ -801,4 +801,16 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
+}
+
+.person p {
+    margin-right: 10px;
+}
+
+.footer2 {
+    background-color: rgb(39, 172, 147);
+    width: 100%;
+    height: 100px;
+    position: fixed;
+    top: 620px;
 }
