--- a/public/style.css
+++ b/public/style.css
@@ -987,3 +987,51 @@ span {
     justify-content: space-around;
     align-items: center;
 }
+
+/* MEDIA QUERIES
+
+@media screen and (max-width: 720px) and (max-height: 1520px) {
+    html {
+        width: 113%;
+        height: 100%;
+    }
+    body {
+        width: 113%;
+        height: 100%;
+    }
+
+    .userFormContainer {
+        width: 113%;
+        height: 100%;
+    }
+
+    .welcomeHeader {
+        overflow: hidden;
+        background-color: rgb(39, 172, 147);
+        width: 112%;
+        height: 60px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 0;
+        position: fixed;
+        top: 0;
+        z-index: 1;
+        opacity: 0.9;
+    }
+
+    .footer3 {
+        background-color: rgb(39, 172, 147);
+        width: 116%;
+        height: 321px;
+        position: relative;
+        /* top: 1147px; */
+/* top: 1195px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        bottom: 19px;
+        left: 79px;
+    }
+} */
