--- a/public/style.css
+++ b/public/style.css
@@ -815,14 +815,15 @@ body {
 
 .resultsContainer {
     position: fixed;
-    left: 120px;
+    left: 230px;
     bottom: 140px;
-    width: 1200px;
+    width: 1000px;
     height: 500px;
     overflow-y: scroll;
     overflow-x: scroll;
     background-color: white;
-    /* border: 2px solid #27ac93; */
+    border: 1px solid #a1b3b9;
+    box-shadow: 5px 5px #a1b3b9;
     z-index: 200;
     text-align: center;
 }
@@ -831,6 +832,7 @@ body {
     position: relative;
     left: 47%;
     cursor: pointer;
+    color: #678691;
 }
 
 .person {
@@ -839,7 +841,7 @@ body {
     justify-content: flex-start;
     position: relative;
     align-items: center;
-    margin-left: 100px;
+    margin-left: 140px;
     /* left: 550px;
     bottom: 180px;
     width: 500px;
@@ -847,6 +849,7 @@ body {
     /* overflow-y: scroll; */
     /* border: 2px solid #27ac93; */
     /* background-color: white; */
+    color: #1f4554;
 }
 
 .person p {
@@ -1012,9 +1015,32 @@ span {
 }
 
 .message {
-    font-size: 18px;
-    margin-bottom: 30px;
+    position: relative;
+    bottom: 8px;
+    font-size: 18.5px;
+    margin-bottom: 50px;
     font-family: "Roboto", sans-serif;
+    color: #1f4554;
+    font-weight: 500;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    width: 750px;
+    line-height: 30px;
+}
+
+.noResult {
+    position: relative;
+    left: 20%;
+    font-family: "Roboto", sans-serif;
+    font-size: 16.5px;
+    color: #678691;
+}
+
+.logErr {
+    font-family: "Roboto", sans-serif;
+    font-size: 16.5px;
+    color: #678691;
 }
 
 /* MEDIA QUERIES
