--- a/public/style.css
+++ b/public/style.css
@@ -1008,6 +1008,9 @@ span {
     position: relative;
     left: 40%;
     top: 185px;
+    font-family: "Roboto", sans-serif;
+    font-size: 16.5px;
+    color: #678691;
 }
 
 .logoLink {
@@ -1041,6 +1044,42 @@ span {
     font-family: "Roboto", sans-serif;
     font-size: 16.5px;
     color: #678691;
+}
+
+.formErr {
+    font-family: "Roboto", sans-serif;
+    font-size: 16.5px;
+    color: #678691;
+    position: relative;
+    top: 40px;
+}
+
+.cookiesModal {
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    top: 75%;
+    width: 100%;
+    height: 180px;
+    background-color: rgb(39, 172, 147);
+    color: white;
+    border: 2px solid white;
+}
+
+.cookiesModal h3 {
+    color: white;
+    font-family: "Roboto", sans-serif;
+}
+
+.cookiesModal button {
+    width: 100px;
+    height: 40px;
+    background-color: white;
+    color: rgb(39, 172, 147);
+    cursor: pointer;
+    border: none;
 }
 
 /* MEDIA QUERIES
